# StrawberryMause

./: .cursorrules  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .sourcery.yaml  AI-Collaberation-Guide.md  INDEX.maus.md  INDEX.md  LINTME.md  MOC.md  Makefile  README.md  new.json  old.json  out.maus.json  pyproject.toml  rustfmt.toml  sys-architecture.md
.cursor/rules/: oaths.mdc  python.mdc  rust.mdc  tailwind.mdc
.github/workflows/: ci.yml
Docs/: App-Index.md  Application-Index.md  Glossary.md  INDEX.maus.md  INDEX.md  Overview.md  Performance.md  Plugins.md  Security-Privacy.md  TODO  Troubleshooting.md  sys-architecture.md
Docs/.legacy_docs/: balance.json  legacy_mausdocpy.md  overview-legacy.md  workflow.json
Docs/.legacy_docs/ v2/: phase2.md
Docs/FAQ/: FAQ.md
Docs/architecture/: BerryTimeline.md  BerryWindow.md  MausDataMap.md
Docs/json/: implementation_guide.json  implementation_guide.md
Docs/modules/: BerryTimeline-Guide.md  INDEX.maus.md
Docs/project_design/architecture/: INDEX.maus.md  MathMaus.md
Docs/reference/: Export-Schemas.md  File-Format.md  INDEX.maus.md  INDEX.md  Mauson-Linter-Checklist.md  Plugin-API.md
Docs/support/: INDEX.maus.md  INDEX.md  Performance.md  Permissions-UX.md  Security-Privacy.md
Docs/user/: Advanced-Editing.md  Editing-Guide.md  FAQ.md  Getting-Started.md  INDEX.maus.md  INDEX.md  Installation-Permissions.md  Playback-Guide.md  Recording-Guide.md  Shortcuts.md
examples/: README.md
scripts/: ast_diff_cli.py  capture_pipeline.py  maus_playback.py  maus_validate.py  seed_bayes.py
src/: AI-PROJECT-TRAINING.yaml  maus_overview.md
src/ v2/: doc.v2.md  tree.md
src/maus_doc/: INDEX.maus.md  akashic_records_interface.rs  ast_diff.py  bayesian_extractor.py  calabi_yau.py  conciousness_fusion_interface.py  manifold.py  mause_doc.md  mause_docs.py  morphogenic_docs.py  quantum_entangled_search.ts  reality_warping_documentation.js
src/theory/: quantum_context_theory.md
tests/: test_bayesian_extractor.py  test_cli_smoke.py  test_event_pipeline.py  test_event_pipeline_accuracy.py  test_mathematic_grid.py  test_maus_data_map.py  test_reasoner.py  test_semantic_config.py
(+44 files in other folders)
